contrib/etc/sysconfig/iptables
# Firewall configuration written by Carbon Soft to reduce load 
# on Carbon Reductor module.
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p icmp -j ACCEPT 
-A PREROUTING -p tcp -m multiport --sports 80,443,22,53,1488 -j ACCEPT 
-A PREROUTING -p tcp -m multiport --dports 80,443,22,53,1488 -j ACCEPT 
-A PREROUTING -p udp -m udp --sport 53 -j ACCEPT
-A PREROUTING -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -j DROP 
COMMIT
